# actix-demo

./: .env.docker  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-01-07-160502_create_tasks/: down.sql  up.sql
src/: main.rs  pgdb.rs  schema.rs
src/api/: api_errors.rs  mod.rs  routes.rs  task.rs
src/models/: task.rs
