[package]
name = "actix-simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = { version = "^1", features = ["derive"] }
env_logger = "^0.10"
log = "^0.4"
derive_more = "^0.99"
diesel = { version = "^2.1", features = ["r2d2", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "^2.1"
dotenvy = "0.15"
serde_json = "^1.0"
r2d2 = "^0.8"
lazy_static = "^1.4"
